--- a/TokGit/src/main/resources/application.properties
+++ b/TokGit/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=TokGit
 #DataSource
 spring.datasource.username=xordbs
 spring.datasource.url=jdbc:mysql://localhost:3306/tokgit?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.password=1q2w3e4r!!
+spring.datasource.password=admin
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
