--- a/TokGit/src/main/resources/application.properties
+++ b/TokGit/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tokgit?characterEncoding=UTF-8
 spring.datasource.password=admin
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
