--- a/TokGit/src/main/resources/application.properties
+++ b/TokGit/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 
-server.port=8080
+server.port=${properties.server.port}
 spring.application.name=TokGit
 
 #DataSource
-spring.datasource.username=xordbs
-spring.datasource.url=jdbc:mysql://localhost:3306/tokgit?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.password=admin
+spring.datasource.username=${properties.database.username}
+spring.datasource.url=jdbc:mysql://${properties.database.url}:3306/tokgit?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.password=${properties.database.password}
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 spring.data.web.pageable.one-indexed-parameters=true
