--- a/TokGit/src/main/resources/application.properties
+++ b/TokGit/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 spring.data.web.pageable.one-indexed-parameters=true
+
+spring.security.oauth2.client.registration.github.clientId=${properties.github.clientId}
+spring.security.oauth2.client.registration.github.clientSecret=${properties.github.clientSecret}
