--- a/TokGit/build.gradle
+++ b/TokGit/build.gradle
@@ -33,6 +33,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 
+	// OAuth2.0
+	implementation 'org.springframework.security:spring-security-oauth2-client'
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
 
 
 }
