feat: Github OAuth + JWT setting end

--- a/TokGit/src/main/resources/application.yaml
+++ b/TokGit/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
       naming:
         implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: 'true'
     properties:
       hibernate:
